/*
 * This file is part of Dependency-Track.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 * Copyright (c) OWASP Foundation. All Rights Reserved.
 */
syntax = "proto3";

package org.dependencytrack.internal.workflow.payload.v1;

import "org/dependencytrack/internal/workflow/payload/v1/common.proto";

option java_multiple_files = true;
option java_package = "org.dependencytrack.proto.internal.workflow.payload.v1";

message CloneProjectArgs {
  // The project to clone.
  ProjectIdentity source_project = 1;

  // New version of the project.
  string target_version = 2;

  // Whether the new project version should be marked as latest.
  bool is_target_version_latest = 3;

  // Whether to update metrics of the new project version.
  bool update_target_metrics = 4;

  // The fields to clone.
  repeated Include includes = 5;

  enum Include {
    INCLUDE_UNSPECIFIED = 0;
    INCLUDE_COMPONENTS = 1;
    INCLUDE_SERVICES = 2;
    INCLUDE_PROPERTIES = 3;
    INCLUDE_TAGS = 4;
    INCLUDE_ACL = 5;
    INCLUDE_AUDIT_HISTORY = 6;
    INCLUDE_POLICY_VIOLATIONS = 7;
  }
}